<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="369dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:scrollbars="horizontal|vertical"
        android:singleLine="false"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_datetime"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="208dp"
        android:width="12dp"
        android:scrollbarSize="4dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/switch_name_datetime"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch_integer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="208dp"
        android:minHeight="48dp"
        android:text="@string/switch_name_integer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_elem"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="148dp"
        android:onClick="addElem"
        android:text="@string/button_add_elem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete_elem"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="144dp"
        android:layout_weight="1"
        android:onClick="deleteElem"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="saveBinaryTreeArray"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:onClick="loadBinaryTreeArray"
        android:text="@string/button_load"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="88dp"
        android:onClick="balanceTree"
        android:text="@string/button_balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="131dp"
        android:layout_height="49dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="88dp"
        android:layout_weight="1"
        android:onClick="searchElem"
        android:text="@string/button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/delete_text"
        android:layout_width="61dp"
        android:layout_height="46dp"
        android:layout_marginStart="336dp"
        android:layout_marginBottom="152dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="58dp"
        android:layout_height="40dp"
        android:layout_marginStart="340dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>